--- a/_includes/course_lesson_list.html
+++ b/_includes/course_lesson_list.html
@@ -9,7 +9,7 @@
 </style>    
 <table class="usa-table--borderless">
     <tr>
-        <td><b>Health Indicator</b></td>
+        <td><b>Health indicator</b></td>
         <td><b>Lesson</b></td>
     </tr>
     
