--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,7 +5,7 @@ The primary and secondary navigation are defined in _data/navigation.yaml
 <header class="usa-header usa-header--extended no-print">
   <div class="usa-navbar">
     <div class="usa-logo" id="extended-logo">
-      <em class="usa-logo__text"><a href="{{ site.baseurl }}" title="Home" aria-label="Home">{{ site.title }}</a></em>
+      <em class="usa-logo__text"><a href="{{ site.baseurl }}/" title="Home" aria-label="Home">{{ site.title }}</a></em>
     </div>
     <button class="usa-menu-btn">Menu</button>
   </div>
